--- a/src/renderer/styles/_theme.scss
+++ b/src/renderer/styles/_theme.scss
@@ -33,6 +33,8 @@ $black-active: #262626;
 $blue: #003087;
 $blue-hover: #0039a1;
 $blue-active: #003087;
+$gray: #7f8c8d;
+$gray-hover: #95a5a6;
 
 // Shadows
 $boxshadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
