--- a/src/renderer/styles/app.scss
+++ b/src/renderer/styles/app.scss
@@ -1,4 +1,5 @@
 @import "~normalize.css/normalize.css";
+@import "~animate.css/animate.css";
 @import "_theme";
 @import "_button";
 @import "_checkmark";
@@ -94,7 +95,7 @@ body {
   }
 
   main {
-    min-height: 100vh;
+    min-height: calc(100vh - 43px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -203,6 +204,15 @@ body {
   }
 
   footer {
+    #settings {
+      color: $gray;
+      float: right;
+      padding-right: 5px;
+      cursor: pointer;
+      &:hover {
+        color: $gray-hover;
+      }
+    }
     #discord-reconnect {
       width: 100vw;
       height: 32px;
